added couple of filters for map , added semaphore for virtual threads